--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "ui-wid",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "16.x"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@web3modal/wagmi": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-select": "5.7.4",
-    "react-toastify": "^9.1.3",
-    "viem": "^1.18.9",
-    "wagmi": "^1.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -29,12 +21,7 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "env": {
-      "es2020": true,
-      "node": true,
-      "mocha": true
-    }
+    ]
   },
   "browserslist": {
     "production": [
@@ -47,19 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.21.11",
-    "@babel/core": "7.22.5",
-    "@babel/eslint-parser": "7.22.5",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@babel/preset-env": "7.22.5",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
   }
 }
