--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "start": "vite --port $PORT --host",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@web3modal/wagmi": "^3.2.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "toastr": "^2.1.4",
     "viem": "^1.18.4",
     "wagmi": "^1.4.5"
   },
